sparrow-engine/sparrow-engine-cpu/sparrow_engine.h

/**
 * Opaque engine handle. Consumers must not inspect or dereference.
 */
typedef void SparrowEngine;
/**
 * Opaque model handle. Consumers must not inspect or dereference.
 */
typedef void SparrowEngineModel;
/**
 * Axis-aligned bounding box, normalized [0,1], xyxy format.
 */
typedef struct SparrowEngineBBox {
  float x_min;
  float y_min;
  float x_max;
  float y_max;
} SparrowEngineBBox;
/**
 * Single detection result. `label` pointer valid until `sparrow_engine_detections_free()`.
 */
typedef struct SparrowEngineDetection {
  struct SparrowEngineBBox bbox;
  const char *label;
  uint32_t label_id;
  float confidence;
} SparrowEngineDetection;
/**
 * Detection result set from a single `sparrow_engine_detect()` / `sparrow_engine_detect_raw()` call.
 */
typedef struct SparrowEngineDetections {
  const struct SparrowEngineDetection *data;
  uintptr_t len;
  uint32_t image_width;
  uint32_t image_height;
} SparrowEngineDetections;
/**
 * Detection inference options. Zero = use default.
 */
typedef struct SparrowEngineDetectOpts {
  float confidence_threshold;
  uint32_t max_detections;
} SparrowEngineDetectOpts;
/**
 * Pixel format code for raw image buffers.
 *
 * Valid values are 0 = RGB, 1 = RGBA, 2 = BGRA, 3 = BGR.
 */
typedef uint32_t SparrowEnginePixelFormat;
/**
 * Single classification prediction.
 */
typedef struct SparrowEngineClassification {
  const char *label;
  uint32_t label_id;
  float confidence;
} SparrowEngineClassification;
/**
 * Classification result from a single `sparrow_engine_classify()` call.
 */
typedef struct SparrowEngineClassifyResult {
  const char *label;
  uint32_t label_id;
  float confidence;
  const struct SparrowEngineClassification *top_results;
  uintptr_t top_results_len;
  uint32_t image_width;
  uint32_t image_height;
  float processing_time_ms;
} SparrowEngineClassifyResult;
/**
 * Classification inference options. Zero = use default.
 */
typedef struct SparrowEngineClassifyOpts {
  uint32_t top_k;
} SparrowEngineClassifyOpts;
/**
 * A pipeline detection: detection + optional classification.
 */
typedef struct SparrowEnginePipelineDetection {
  struct SparrowEngineDetection detection;
  bool has_classification;
  struct SparrowEngineClassification classification;
} SparrowEnginePipelineDetection;
/**
 * Pipeline result from `sparrow_engine_run_pipeline()`.
 */
typedef struct SparrowEnginePipelineResult {
  const char *pipeline_id;
  const struct SparrowEnginePipelineDetection *data;
  uintptr_t len;
  uint32_t image_width;
  uint32_t image_height;
  float processing_time_ms;
} SparrowEnginePipelineResult;
/**
 * A single detected audio segment.
 */
typedef struct SparrowEngineAudioSegment {
  float start_time_s;
  float end_time_s;
  float confidence;
} SparrowEngineAudioSegment;
/**
 * Audio detection result from `sparrow_engine_detect_audio`.
 */
typedef struct SparrowEngineAudioResult {
  const struct SparrowEngineAudioSegment *data;
  uintptr_t len;
  float duration_s;
  uint32_t sample_rate;
  float processing_time_ms;
} SparrowEngineAudioResult;
/**
 * Audio detection options. Zero = use manifest default.
 */
typedef struct SparrowEngineAudioDetectOpts {
  float confidence_threshold;
  float segment_duration_s;
  float segment_stride_s;
} SparrowEngineAudioDetectOpts;
/**
 * Run detection on an encoded image buffer (JPEG/PNG). Returns null on error.
 *
 * # Safety
 * - `model` must be a valid model pointer.
 * - `image` must point to `len` bytes of encoded image data.
 * - `opts` may be null (use defaults).
 */
struct SparrowEngineDetections *sparrow_engine_detect(const SparrowEngineModel *model,
                                                      const uint8_t *image,
                                                      uintptr_t len,
                                                      const struct SparrowEngineDetectOpts *opts);
/**
 * Run detection on a raw pixel buffer. Returns null on error.
 *
 * # Safety
 * - `model` must be a valid model pointer.
 * - `pixels` must point to `h * stride` bytes of pixel data.
 * - `opts` may be null (use defaults).
 */
struct SparrowEngineDetections *sparrow_engine_detect_raw(const SparrowEngineModel *model,
                                                          const uint8_t *pixels,
                                                          uint32_t w,
                                                          uint32_t h,
                                                          uint32_t stride,
                                                          SparrowEnginePixelFormat format,
                                                          const struct SparrowEngineDetectOpts *opts);
/**
 * Run classification on an encoded image buffer (JPEG/PNG). Returns null on error.
 *
 * # Safety
 * - `model` must be a valid model pointer.
 * - `image` must point to `len` bytes of encoded image data.
 * - `opts` may be null (use defaults).
 */
struct SparrowEngineClassifyResult *sparrow_engine_classify(const SparrowEngineModel *model,
                                                            const uint8_t *image,
                                                            uintptr_t len,
                                                            const struct SparrowEngineClassifyOpts *opts);
/**
 * Run a pipeline (detect → classify) on an encoded image. Returns null on error.
 *
 * # Safety
 * - `engine` must be a valid engine pointer.
 * - `pipeline_id` must be a valid, non-null, null-terminated UTF-8 string.
 * - `image` must point to `len` bytes of encoded image data.
 * - `detect_opts` and `classify_opts` may be null (use defaults).
 */
struct SparrowEnginePipelineResult *sparrow_engine_run_pipeline(const SparrowEngine *engine,
                                                                const char *pipeline_id,
                                                                const uint8_t *image,
                                                                uintptr_t len,
                                                                const struct SparrowEngineDetectOpts *detect_opts,
                                                                const struct SparrowEngineClassifyOpts *classify_opts);
/**
 * Run audio detection on a WAV file. Returns null on error.
 *
 * # Safety
 * - `model` must be a valid model pointer (audio model with mel spectrogram preprocessing).
 * - `audio_path` must be a valid, non-null, null-terminated UTF-8 path to a WAV file.
 * - `opts` may be null (use defaults).
 */
struct SparrowEngineAudioResult *sparrow_engine_detect_audio(const SparrowEngineModel *model,
                                                             const char *audio_path,
                                                             const struct SparrowEngineAudioDetectOpts *opts);
/**
 * Free a `SparrowEngineDetections` returned by `sparrow_engine_detect` or `sparrow_engine_detect_raw`.
 *
 * # Safety
 * `ptr` must be a pointer returned by `sparrow_engine_detect`/`sparrow_engine_detect_raw`, or null.
 */
void sparrow_engine_detections_free(struct SparrowEngineDetections *ptr);
/**
 * Return the last error message for this thread, or null if no error.
 * The returned pointer is valid until the next FFI call on the same thread.
 *
 * # Safety
 * Thread-safe. Returned pointer must not be freed by the caller.
 */
const char *sparrow_engine_last_error(void);