sparrow-engine/tests/csharp_ffi_test/NativeMethods.g.cs


        /// <summary>
        ///  Return the last error message for this thread, or null if no error.
        ///  The returned pointer is valid until the next FFI call on the same thread.
        ///
        ///  # Safety
        ///  Thread-safe. Returned pointer must not be freed by the caller.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_last_error", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* sparrow_engine_last_error();


    }

    /// <summary>
    ///  Axis-aligned bounding box, normalized [0,1], xyxy format.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct SparrowEngineBBox
    {
        public float x_min;
        public float y_min;
        public float x_max;
        public float y_max;
    }

    /// <summary>
    ///  Single detection result. `label` pointer valid until `sparrow_engine_detections_free()`.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct SparrowEngineDetection
    {
        public SparrowEngineBBox bbox;
        public byte* label;
        public uint label_id;
        public float confidence;
    }

    /// <summary>
    ///  Detection result set from a single `sparrow_engine_detect()` / `sparrow_engine_detect_raw()` call.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct SparrowEngineDetections
    {
        public SparrowEngineDetection* data;
        public nuint len;
        public uint image_width;
        public uint image_height;
    }

    /// <summary>
    ///  Single classification prediction.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct SparrowEngineClassification
    {
        public byte* label;
        public uint label_id;
        public float confidence;
    }

    /// <summary>
    ///  Classification result from a single `sparrow_engine_classify()` call.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct SparrowEngineClassifyResult
    {
        public byte* label;
        public uint label_id;
        public float confidence;
        public SparrowEngineClassification* top_results;
        public nuint top_results_len;
        public uint image_width;
        public uint image_height;
        public float processing_time_ms;
    }

    /// <summary>
    ///  A pipeline detection: detection + optional classification.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct SparrowEnginePipelineDetection
    {
        public SparrowEngineDetection detection;
        [MarshalAs(UnmanagedType.U1)] public bool has_classification;
        public SparrowEngineClassification classification;
    }

    /// <summary>
    ///  Pipeline result from `sparrow_engine_run_pipeline()`.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct SparrowEnginePipelineResult
    {
        public byte* pipeline_id;
        public SparrowEnginePipelineDetection* data;
        public nuint len;
        public uint image_width;
        public uint image_height;
        public float processing_time_ms;
    }

    /// <summary>
    ///  Detection inference options. Zero = use default.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct SparrowEngineDetectOpts
    {
        public float confidence_threshold;
        public uint max_detections;
    }

    /// <summary>
    ///  Classification inference options. Zero = use default.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct SparrowEngineClassifyOpts
    {
        public uint top_k;
    }

    /// <summary>
    ///  A single detected audio segment.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct SparrowEngineAudioSegment
    {
        public float start_time_s;
        public float end_time_s;
        public float confidence;
    }

    /// <summary>
    ///  Audio detection result from `sparrow_engine_detect_audio`.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct SparrowEngineAudioResult
    {
        public SparrowEngineAudioSegment* data;
        public nuint len;
        public float duration_s;
        public uint sample_rate;
        public float processing_time_ms;
    }

    /// <summary>
    ///  Audio detection options. Zero = use manifest default.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct SparrowEngineAudioDetectOpts
    {
        public float confidence_threshold;
        public float segment_duration_s;
        public float segment_stride_s;
    }


    /// <summary>
    ///  Pixel format for raw image buffers.
    /// </summary>
    internal enum SparrowEnginePixelFormat : uint
    {
        Rgb = 0,
        Rgba = 1,
        Bgra = 2,
        Bgr = 3,
    }


}
